# blender-kb-mcp

./: .gitignore  CREDITS.md  Dockerfile  README.md  docker-compose.ingest.yml  docker-compose.mcp_ollama_container.yml  docker-compose.mcp_ollama_host.yml  docker-compose.yml  pyproject.toml  requirements.txt
config/: config_ingest.toml  config_local.toml  config_mcp.toml  config_mcp_ollama_host.toml  config_prod.toml
docs/: ingestion_pipeline.md  mcp_server.md  prerequisite.md  purpose.md  setup_tooling.md
kb/docs/: README.md
kb/samples/blender_code_samples_5_1/: README.md
kb/samples/blender_code_samples_5_1/blender_api_samples/01_basics/: 01_scene_objects.py.md  02_object_properties.py.md  03_materials_textures.py.md  04_collections_layers.py.md
kb/samples/blender_code_samples_5_1/blender_api_samples/02_geometry_creation/: 01_bmesh_primitives.py.md  02_mesh_from_data.py.md
kb/samples/blender_code_samples_5_1/blender_api_samples/42_misc/: 01_man_with_ball_contraint.md  02_minecraft_man_with_voroni_texture.md
kb/templates/blender_templates_5_1/: addon_add_object.py.md  background_job.py.md  batch_export.py.md  bmesh_simple.py.md  bmesh_simple_editmode.py.md  builtin_keyingset.py.md  custom_nodes.py.md  driver_functions.py.md  external_script_stub.py.md  gizmo_custom_geometry.py.md  gizmo_operator.py.md  gizmo_operator_target.py.md  gizmo_simple_2d.py.md  gizmo_simple_3d.py.md  image_processing.py.md  operator_file_export.py.md  operator_file_import.py.md  operator_mesh_add.py.md  operator_mesh_uv.py.md  operator_modal.py.md  operator_modal_draw.py.md  operator_modal_timer.py.md  operator_modal_view3d.py.md  operator_modal_view3d_raycast.py.md  operator_node.py.md  operator_simple.py.md  ui_asset_shelf.py.md  ui_list.py.md  ui_list_generic.py.md  ui_list_simple.py.md  ui_menu.py.md  ui_menu_simple.py.md  ui_panel.py.md  ui_panel_simple.py.md  ui_pie_menu.py.md  ui_previews_custom_icon.py.md  ui_previews_dynamic_enum.py.md  ui_tool_simple.py.md
scripts/: copy-kb-to-ingest.sh  get-blender-docs-zip.sh  init_ingest.sh  run-ingest.sh
src/core/: __init__.py  config.py  db.py
src/ingest/: ingest.Dockerfile  ingest_docs.py  query.py
src/ingest/parser/: __init__.py  base.py  bs_parser.py  md_parser.py  traf_parser.py
src/mcp-server/: mcp.Dockerfile  mcp_ollama_container.Dockerfile  mcp_ollama_host.Dockerfile  server.py
src/ollama/: README.md  ollama.Dockerfile  startup.sh
tests/core/: test_config.py  test_db.py
